css and embedding

--- a/React-Portfolio/src/App.css
+++ b/React-Portfolio/src/App.css
@@ -3,6 +3,11 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  --primary-blue: #086788;
+  --light-blue: #87BCDE;
+  --light-green: #D3F9B5;
+  --earth-green: #82846D;
+  --dark-brown: #5C573E;
 }
 
 .logo {
