adding stylling and prepping projects

--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,13 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  --primary-blue: #086788;
+  --light-blue: #87BCDE;
+  --light-green: #D3F9B5;
+  --earth-green: #82846D;
+  --dark-brown: #5C573E;
+
+  background-color: var(--light-blue);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,16 +17,26 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+header {
+  background-color: var(--primary-blue);
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
 a {
   font-weight: 500;
-  color: #646cff;
+  color: var(--earth-green);
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: var(--dark-brown);
 }
 
 body {
+  background-color: var(--light-blue);
   margin: 0;
   display: flex;
   place-items: center;
@@ -30,9 +44,48 @@ body {
   min-height: 100vh;
 }
 
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
+
+footer a {
+  font-weight: 500;
+  color: var(--earth-green);
+  text-decoration: inherit;
+  padding: 10px;
+}
+
+footer a svg {
+  stroke: currentcolor;
+  fill: currentcolor;
+  stroke-width: 0;
+  height: 3em;
+  width: 3em;
+}
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  text-align: left;
+}
+
+header div {
+  text-align: right;
+  font-size: 1.4em;
+}
+
+header div a {
+  padding-right: 50px;
+}
+
+li a {
+  font-weight: 500;
+  color: var(--earth-green);
+  text-decoration: inherit;
+  padding: 5px;
 }
 
 button {
@@ -42,27 +95,40 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: var(--light-green);
   cursor: pointer;
+  margin: 5px;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: var(--primary-blue);
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+.project-card {
+  color: var(--light-green);
+}
+
+.resume {
+  color: var(--light-green);
+}
+
+.nav {
+  color: var(--light-green)
+}
+
+@media (max-width: 600px) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    color: var(--primary-blue);
+    background-color: var(--light-blue);
   }
   a:hover {
-    color: #747bff;
+    color: var(--dark-brown);
   }
   button {
-    background-color: #f9f9f9;
+    background-color: var(--light-green);
   }
 }
