--- a/src/index.css
+++ b/src/index.css
@@ -102,6 +102,11 @@ li a {
   padding: 5px;
 }
 
+img {
+  height: 18em;
+  width: 32em;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -109,7 +114,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: var(--light-green);
+  background-color: var(--light-blue);
   cursor: pointer;
   margin: 5px;
   transition: border-color 0.25s;
