--- a/src/index.css
+++ b/src/index.css
@@ -268,6 +268,14 @@ textarea {
   overflow-wrap: break-word; /* Ensures long words break */
 }
 
+.contact {
+  
+}
+
+.contact div h3 {
+  color: var(--soft-orange)
+}
+
 .about {
   font-size: 1.5rem;
 }
